# vantage-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: activation.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
